--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.5",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "postgres": "^3.4.7",
+    "query-string": "^9.2.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
